--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     const video = document.getElementById('video');
     if (Hls.isSupported()) {
       const hls = new Hls();
-      hls.loadSource('/api/playlist'); // Points to your Vercel API
+      hls.loadSource('/api/playlist');
       hls.attachMedia(video);
       hls.on(Hls.Events.MANIFEST_PARSED, () => video.play());
     } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
